--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "daisyui": "^2.46.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
     "uuid": "^9.0.0"
   },
@@ -24,8 +26,9 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "path": "^0.12.7",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.21",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
