--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "lint": "tsc --noEmit && eslint ./src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npm run lint -- --fix",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -23,18 +27,23 @@
   },
   "devDependencies": {
     "@acm-97/eslint-prettier-config": "^1.2.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/ui": "^0.27.0",
     "autoprefixer": "^10.4.13",
+    "jsdom": "^21.0.0",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.27.0"
   }
 }
